--- a/h/hy/hyp/hyperarts.com.html
+++ b/h/hy/hyp/hyperarts.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hyperarts.com privacy policy that was archived on 2009-12-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091207022128id_/http%3A//www.hyperarts.com/san-francisco-bay-area-web-developers/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hyperarts.com privacy policy that was archived on 2010-09-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100922082242id_/http%3A//www.hyperarts.com/san-francisco-bay-area-web-developers/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<title>Privacy Statement | HyperArts</title>
@@ -30,24 +30,32 @@ charset=iso-8859-1">
 
 
 	<div id="quicknav">
-	<a href="/blog/" title="HyperArts Blog">HyperArts Blog</a> | <a href="/san-francisco-bay-area-web-developers/website-design-development-company.html" title="San Francisco SEO and Web Developers Company">About HyperArts</a> | <a href="/sitemap.html" title="Site Map">Site Map</a>	<div id="contact"><a href="/san-francisco-bay-area-web-developers/contact-hyperarts.html">Contact Us</a></div></div>
+	<a href="/san-francisco-bay-area-web-developers/website-design-development-company.html" title="San Francisco SEO and Web Developers Company">About HyperArts</a> | <a href="/sitemap.html" title="Site Map">Site Map</a> | <strong><a href="/san-francisco-bay-area-web-developers/contact-hyperarts.html">CONTACT US</a></strong>
+	
+		<div id="sm-icons-site">
+		<a href="http://facebook.com/hyperarts" onclick="pageTracker._trackEvent('Blog', 'SM Widgets', 'Facebook');" onfocus="if(this.blur)this.blur()"><img src="/_icons/facebook-orange.png" alt="HyperArts Facebook Page" id="firstimg"></a><a href="http://twitter.com/hyperarts" title="HyperArts Twitter Page" target="_blank"><img src="/_icons/twitter-orange.png" alt="HyperArts Twitter Profile"></a><a href="http://www.hyperarts.com/blog/" title="HyperArts Blog on Facebook, Static FBML, WordPress + More"><img src="/_icons/rss-orange.png" alt="HyperArts RSS"></a><a href="http://www.youtube.com/hyperarts" title="HyperArts YouTube Channel" target="_blank"><img src="/_icons/youtube-orange.png" alt="HyperArts YouTube Channel" class="last"></a><!-- <a href="http://www.linkedin.com/in/hyperarts" target="_blank"><img src="/_icons/Subscribe-Linkedin.gif" alt="HyperArts Linkedin Page" class="last" /></a> -->
+		</div>
+	</div>
 
-<div id="logo">
-<a href="/" title="HyperArts Home Page"><img src="/_img/hyperarts-logo_sm.gif" alt="HyperArts Website Design &amp; Web Development"></a>
-</div>
+	<div id="logo"><a href="/" title="HyperArts Home Page"><img src="/_img/HyperArts_logo_home-white.gif" alt="HyperArts SEO, Website Design and Web Development" id="homelogo"></a></div>
 
-<div id="topnav">
-<ul>
+	<div id="topnav">
+	<ul>
+	
 <!-- 		<li class="first"  id="active"><a href="/san-francisco-bay-area-web-developers/website-design-development-company.html" title="San Francisco SEO and Web Developers Company">About Us</a></li>
- -->		<li class="first"><a href="/san-francisco-bay-area-design-company/elegant-website-designs.html" title="Website Design Portfolio">Portfolio</a></li>
-		<li><a href="/san-francisco-bay-area-design-company/logo-graphic-designers-corporate-branding.html" title="Website Design and Development Services">Graphic Design</a></li>
-		<li><a href="/seo-services/social-media-inbound-marketing.html" title="Social Media Consulting &amp; Inbound Marketing - SEO and SEM">Social Media Consulting</a></li>
+ -->
+ 		<li class="first"><a href="/san-francisco-bay-area-design-company/elegant-website-designs.html" title="Website Design Portfolio">Portfolio</a></li>
+
+		<li><a href="/seo-services/facebook-fan-page-development.html" title="Social Media Consulting &amp; Facebook Fan Page Development">Social Media · Facebook</a></li>
 		<li><a href="/seo-services/search-engine-optimization-services-san-francisco.html" title="Search Engine Optimization and Marketing - SEO and SEM">SEO</a></li>
 		<li><a href="/san-francisco-oakland-website-services/web-developers-designers.html" title="Website Design and Development Services">Web Services</a></li>
+		<li class="last"><a href="http://www.hyperarts.com/blog/" title="HyperArts Blog - Facebook, Static FBML, Social Media, WordPress">Blog</a></li>
 
 </ul>
-</div>
-
+	</div>
+	
+	
+<!-- <div id="contact" ><a href="/san-francisco-bay-area-web-developers/contact-hyperarts.html">Contact Us</a></div></div> -->
 	
 	
 
@@ -71,7 +79,6 @@ charset=iso-8859-1">
 		</div>	
 
 
- 
 
 
 
@@ -128,8 +135,12 @@ charset=iso-8859-1">
 
 	<p class="clear">&nbsp;</p>
 
-<div id="footer">
-© 2009 HyperArts All rights reserved. &nbsp; &nbsp; &nbsp;  510.339.6084 · <a href="javascript:nospam('sales010','hyperarts.com')" title="email HyperArts">sales010@hyperarts.com</a> · <a href="/sitemap.html" title="HyperArts Site Map">site map</a> · <a href="/san-francisco-bay-area-web-developers/privacy.html" title="HyperArts Privacy Statement">privacy</a></div>
+
+		<div id="footer">
+		© 2010 HyperArts All rights reserved. · <a href="/san-francisco-bay-area-web-developers/privacy.html" title="HyperArts Privacy Statement">privacy</a></div>
+	
+
+
 
 	<div id="partners">
 	HyperArts Website Design, a prominent <a href="/seo-services/search-engine-optimization-services-san-francisco.html" title="San Francisco San Jose Oakland Marin SEO + SEM Company">San Francisco Bay Area SEO company and Web Developer, located in Oakland, California</a>, does <a href="/san-francisco-bay-area-web-developers/website-design-development-company.html" title="San Francisco Bay Area Web Developers">San Francisco and San Jose Web development</a> and <a href="/san-francisco-bay-area-design-company/elegant-website-designs.html">website design</a>. HyperArts offers <a href="/san-francisco-bay-area-design-company/logo-graphic-designers-corporate-branding.html">Logo Design / Corporate Branding</a>, <a href="/san-francisco-bay-area-design-company/elegant-website-designs.html" title="Website Design and Web Graphics Designers">Website Design</a>, <a href="/san-francisco-web-site-programmers/javascript-css-xhtml-coders.html" title="Website Web Programming Services">Website Programming</a>, <a href="/seo-services/seo-audit-website-analysis.html" title="Affordable Budget SEO Web site Audits and Assessments">Affordable SEO Website Audits and Assessments</a>, <a href="/seo-services/social-media-inbound-marketing.html" title="Social Media Marketing &amp; Consulting">Social Media Marketing &amp; Consulting</a>, <a href="/seo-services/search-engine-optimization-services-san-francisco.html" title="San Francisco San Jose Oakland Marin SEO + SEM Company">Affordable and budget-conscious SEO and SEM</a> and Web development services, including consulting, <a href="/san-francisco-website-maintenance/outsourced-content-management.html" title="Website Maintenance">outsourced website maintenance</a>, Search Engine Optimization and <a href="/seo-services/google-pay-per-click-ppc-adwords.html">Google Adwords consulting</a>.</div>
@@ -137,7 +148,7 @@ charset=iso-8859-1">
 </div>
 <div id="bottom">&nbsp;</div>
 
-<script src="/mint/?js" type="text/javascript"></script><img src="https://web.archive.org/web/20060317080040/http://www.kensavage.com/mint/?record&amp;key=316d424f653434324646593835323453454170786e4e313141517542474b4765&amp;referer=&amp;resource=https%3A//web.archive.org/web/20091207022128id_/http%253A//www.hyperarts.com/san-francisco-bay-area-web-developers/privacy.html&amp;resource_title=Privacy%20Statement%20%7C%20HyperArts&amp;resolution=800x600&amp;flash_version=0&amp;1580378236912" alt="" style="position: absolute; left: -9999px;" onload="this.parentNode.removeChild(this);">
+<script src="/mint/?js" type="text/javascript"></script><img src="https://web.archive.org/web/20060317080040/http://www.kensavage.com/mint/?record&amp;key=316d424f653434324646593835323453454170786e4e313141517542474b4765&amp;referer=&amp;resource=https%3A//web.archive.org/web/20100922082242id_/http%253A//www.hyperarts.com/san-francisco-bay-area-web-developers/privacy.html&amp;resource_title=Privacy%20Statement%20%7C%20HyperArts&amp;resolution=800x600&amp;flash_version=0&amp;1580378237868" alt="" style="position: absolute; left: -9999px;" onload="this.parentNode.removeChild(this);">
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
