--- a/l/la/las/lasikplus.com.html
+++ b/l/la/las/lasikplus.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lasikplus.com privacy policy that was archived on 2010-01-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100102181105id_/http%3A//www.lasikplus.com/includes/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lasikplus.com privacy policy that was archived on 2010-09-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100922214852id_/http%3A//lasikplus.com/includes/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <script type="text/javascript" src="/includes/jquery-latest.pack.js"></script>
@@ -82,11 +82,12 @@ img { behavior: url(/iepngfix.htc) }
 	<!-- Begin Main Navigation -->
 	<div id="main_nav" class="chromestyle">
 	    <ul>
+	        <li><a href="/LasikPlus.asp">Home</a></li>
 			<li><a href="/lasik/lasik.asp" rel="dropmenu1_b">Understanding LASIK Surgery</a></li>
 		    <li><a href="/lasik-plus/lasik-plus.asp" rel="dropmenu2_b">The Lasik<i>Plus</i>® Advantage</a></li>
-		    <li><a href="/lasik-center/lasik-center.asp">LASIK Locations &amp; Doctors</a></li>
+		    <li><a href="/lasik-center/lasik-center.asp">Locations &amp; Doctors</a></li>
 		    <li><a href="/lasik-cost/lasik-cost.asp" rel="dropmenu3_b">LASIK Price &amp; Financing</a></li>
-			<li><a href="/lasik-testimonials/testimonial.asp">LASIK Patient Stories</a></li>
+			<li><a href="/lasik-testimonials/testimonial.asp">Patient Stories</a></li>
 	    </ul>
 	</div>
 	        <!--1st drop down menu -->
@@ -115,8 +116,6 @@ img { behavior: url(/iepngfix.htc) }
                 <a href="/lasik-plus/pupil-size.asp">LASIK and Pupil Size</a>
                 <a href="/lasik-plus/lasik-plus-technology.asp">Lasik<i>Plus</i> Technology</a>
 		    <a href="/lasik-plus/intralase-benefits.asp">IntraLase</a>
-                <a href="/lasik-plus/broad-beam-technology.asp">Broad Beam Technology</a>
-                <a href="/lasik-plus/flying-spot-technology.asp">Flying Spot Technology</a>
                 <a href="/lasik-plus/lasik-plus-center.asp">Lasik<i>Plus</i> Centers</a>
                 <a href="/lasik-plus/lasik-plus-faq.asp">Lasik<i>Plus</i> FAQs</a>
                 <a href="/lasik-plus/general-procedures.asp">Laser Vision Correction Options</a>
@@ -148,7 +147,7 @@ img { behavior: url(/iepngfix.htc) }
 	    <div id="locations">
 
 
-<h3>LASIK provider for 7 of the 8 leading health/vision plans</h3>
+
 
 
 
@@ -229,9 +228,9 @@ We collect the following information from visitors to our Web site:
    var so = new SWFObject("/flash/01.swf", "01", "235", "133", "8", "#ffffff");
    so.addParam("wmode", "window");
    so.write("right-ad1");
-border:solid 2px #C1C1C1; 
+border:solid 2px #C1C1C1;
 border-left-style:outset; border-right-style:inset
-</script> 238 341 border: solid 2px #C0C0C0; .right-ad2 border-bottom-style:inset; 
+</script> 238 341 border: solid 2px #C0C0C0; .right-ad2 border-bottom-style:inset;
 </div -->
 
 <!--<div id="locate" style="background-image:url(/images_new/locate_bg.jpg);background-repeat:no-repeat;width:235px;height:117px;background-color:#ffffff;margin-top:5px;">
@@ -263,9 +262,9 @@ Sunday:  9 am - 7 pm EST<br>
 <!--
 <a href="http://www.surveyconsole.com/console/TakeSurvey?id=397638" target="_blank"><img src="../images/lasik_amazon.gif" border="0"/></a>
 -->
-<!--<a href="#"><img src="/images_new/right_ad3.png" alt="" /></a>-->
+<!--<a href="#"><img src="/images_new/right_ad3.gif" alt="" /></a>-->
 <div id="right-ad3" style="padding:25px 0 10px 0;">
-<a href="/lasik-contact/brochure_request.asp"><img src="/images_new/right_ad3.png" alt="Have a question? Contact a trained LASIK counseler..."></a>
+<a href="http://www.lasikplus.com/ischedule/action/home.lp"><img src="/images_new/right_ad3.gif" alt="Schedule your FREE LASIK exam today!"></a>
 <script type="text/javascript">
    var so = new SWFObject("/flash/03.swf", "03", "235", "133", "8", "#ffffff");
    so.addParam("wmode", "window");
@@ -291,10 +290,11 @@ Near You</p>
 </div>
 
 <!-- End Right Column Callout -->
+
 <div class="clear">&nbsp;</div>
 </div>
 
-<!-- End Main Container -->
+<!-- End Main Container --> 
 
 <!-- Begin Footer -->
 <div id="foot">
@@ -309,40 +309,42 @@ Near You</p>
 <a href="/lasik-testimonials/testimonial.asp" class="foot">Patient Stories</a>|
 <a href="/includes/privacy.asp" class="foot">Privacy Policy</a>|
 <a href="/lasik-contact/Contact.asp" class="foot">Contact Us</a>|
-<a href="/images/form.pdf" target="_blank" class="foot"><font size="2">Request for Records</font></a>|
+<a href="/images/form.pdf" target="_blank" class="foot">Request for Records</a>|
 <a href="/ir/index.html" class="foot">Investors</a>|<a href="/lasik-job/lasik-job.asp" class="foot">Careers</a>|<a href="/sitemap/sitemap.asp" class="foot">Site Map</a>
 </div>
 
-<div class="copyright">Copyright © 2008 LCA-Vision, Inc. All Rights Reserved.
+<div class="copyright">Copyright © 2010 LCA-Vision, Inc. All Rights Reserved.
 
 <div id="Div1">Lasik<i>Plus</i> is a leader in
 <a href="/lasik-plus/traditional-lasik.asp">LASIK</a>. Our highly-experienced <br>
-surgeons use the state of the art 
+surgeons use the state of the art
 <a href="/lasik-plus/general-procedures.asp">Laser Vision Correction</a> technology to correct your vision.</div></div>
 <br>
-<p>
-</p><div style="font-size:0.9em;">
-i.	*Offer is subject to credit approval. No finance charges will be assessed if the amount in full is paid by the due date. If it is not, finance charges will be assessed on the purchase price from the date of purchase at a variable APR of 22.99% (as of Nov. 6, 2008, subject to market changes). A minimum monthly payment of 3% of the balance is required and payments can be as low as $58.94/month. Other financing options are available. Call for details. 
-Additional 5% savings may still be obtained if you are enrolled in a participating health or vision plan. LasikPlus® nationwide procedure volume based on aggregating all LasikPlus® affiliated surgeon procedures. Other financing options are available. Call for details. 
-<p></p>
-<br>
 
-ii.	Surgeons are independent doctors of ophthalmology providing services for LasikPlus. In most states, businesses not exclusively owned by physicians are prohibited
- from practicing medicine. In those states, LasikPlus and LasikPlus Vision Center exclusively provide management services to affiliated physician practices.
- For those states, references in this advertisement to LasikPlus or LasikPlus Vision Center are not intended to suggest that LasikPlus or LasikPlus Vision Center
- provide medical services.
-<p></p>
-<br>
-<div id="div1" style="background-color:#6BBDEB" onclick="expand('californiatext', this, 'California');">California Residents (Click Here)</div>
-<p id="californiatext" style="display:none">
-iii. The cost of a Traditional LASIK procedure with Lifetime in Fresno and Sacramento is $2099 per eye. The cost of a Traditional LASIK procedure with Lifetime in San Francisco and San Diego is $1999 per eye. No finance charges will be assessed if the amount in full is paid by the due date. If it is not, finance charges will be assessed on the purchase price from the date of purchase at a variable APR of 22.23% (as of May 1, 2008, subject to market changes). A minimum monthly payment of 3% of the balance is required and your payment for LASIK can be $90 per month for a &nbsp;Traditional LASIK with Lifetime procedure. Call for details. &nbsp;Dr. Randa Garrana is the owner and Medical Director of LasikPlus of Southern California and &nbsp;LasikPlus of Fresno &nbsp;(FNP #37527, #37526 respectively). Dr. George Simon is the owner and Medical Director of LasikPlus Vision Center Medical Group (FNP # 36857). James Abrams is the owner and Medical Director of LasikPlus of Sacramento (FNP #37530). Dr. James Abrams is the owner and Medical Director of LasikPlus of San Jose (FNP #37528).
+<p>
+</p><div style="font-size:0.9em; width:1000px;margin:0 auto">
+<p>*15% OFF discount applies to standard treatment price for treatments on or before September 30, 2010. Additional 5% savings may be obtained with enrollment in participating health or vision plans. Discount can’t be combined with other offers.
+<br><br>
 </p>
-<br>
-<div id="div2" style="background-color:#6BBDEB" onclick="expand('floridatext', this, 'Florida');">Florida Residents (Click Here)</div>
+ <p></p><ul>
+  <li>
+	i.Valid on CareCredit account. A minimum purchase amount may be required for promotional plans longer than 6 months in duration. On promo purchase balance, monthly payments are required, but no Finance Charges will be assessed if (1) promo purchase balance paid in full in 12 months, and (2) all minimum monthly payments on account paid when due. Otherwise, promo may be terminated and treated as a non-promo balance. Finance Charges will be accrued at the Purchase APR and assessed from purchase date. Standard terms apply to non-promo purchase and optional charges. Promo purchases on existing accounts may not receive full benefit of promo terms, including reduced APR if applicable, if account is subject to penalty APR. Payments over the minimum will be applied as required by applicable law. As of 2/1/10, APR 24.99% &amp; on all accounts in default, Penalty APR: 29.99%. Minimum Finance Charge $2.00. Subject to approval by GE Money Bank
+  </li>
+<p></p>
+<p>
+ii.Surgeons are independent doctors of ophthalmology providing services for LasikPlus. References in this advertisement to LasikPlus or LasikPlus Vision Center are not intended to suggest that LasikPlus or LasikPlus Vision Center provide medical services. Most Recommended claim based on customer satisfaction surveys from June 2009-June 2010 from LasikPlus centers with multiple excimer lasers
+</p>
+<div id="div1" style="background-color:#6BBDEB" onclick="expand('californiatext', this, 'California');">California Residents (Click Here)</div>
+<span id="californiatext" style="display:none">
+iii. The cost of a Traditional LASIK procedure with Lifetime in San Diego is $1999 per eye. No finance charges will be assessed if the amount in full is paid by the due date. If it is not, finance charges will be assessed on the purchase price from the date of purchase at a variable APR of 22.23% (as of May 1, 2008, subject to market changes). A minimum monthly payment of 3% of the balance is required and your payment for LASIK can be $90 per month for a &nbsp;Traditional LASIK with Lifetime procedure. Call for details. &nbsp;Dr. Randa Garrana is the owner and Medical Director of LasikPlus of Southern California (FNP #37527).
+</span>
+<p><br>
+</p><div id="div2" style="background-color:#6BBDEB" onclick="expand('floridatext', this, 'Florida');">Florida Residents (Click Here)</div>
 <p id="floridatext" style="display:none">
-iv.	FL Residents 
+iv.	FL Residents
 The patient and any other person responsible for payment has a right to refuse to pay, cancel payment or be reimbursed for payment for any service, examination or treatment that is performed as a result of and within 72 hours of responding to the advertisement for the free, discounted fee or reduced fee service, examination or treatment. In most states, businesses not exclusively owned by physicians are prohibited from practicing medicine.
-</p></div>
+</p>
+</ul></div>
 
 	</div>
 </div>
