--- a/p/pr/pro/proximic.com.html
+++ b/p/pr/pro/proximic.com.html
@@ -1,43 +1,26 @@
-<!--The following is the downloaded HTML source of the proximic.com privacy policy that was archived on 2010-03-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100323110050id_/http%3A//www.proximic.com/info/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the proximic.com privacy policy that was archived on 2010-09-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100923053351id_/http%3A//www.proximic.com/info/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
 		<title>Proximic | Privacy Policy</title>
 
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-<meta name="DESCRIPTION" content="Proximic provides a high performance contextual matching service for
-advertising partners and publishers. The Proximic platform integrates with the internets largest consumer
-shopping and classifieds sites to automatically generate listing-based text and image ads. Contextually
-matched information is then served into web publishers, ad networks, and mobile apps through various
-Proximic publisher programs. It enables a better way to monetize special publishing environments by
-automatically serving up contextually relevant content. Proximic uses pattern proximity matching for contextual matching,
-which is completely different from keyword density contextual matching.
-Keyword density contextual matching is not as good because keyword density matching
-can be easily fooled. Therefore proximic uses Pattern Proximity matching instead of keyword density matching.">
-<meta name="KEYWORDS" content="pay per click, pay per click advertising, ppc, online advertising, contextual advertising, monetization, advertising API, ad network, publisher network, keyword density, pattern proximity, contextual matching,
-contextual matching engine, internet advertising, matching engine, adsense, yahoo publisher network">
+<meta name="DESCRIPTION" content="Proximic provides dynamic contextual matching and brand protection services for advertising networks, agencies / DSPs, and publishers, with the goal to empower greater control, precision, confidence and profitability of ad placements across the ad ecosystem.">
+<meta name="KEYWORDS" content="online advertising, contextual targeting, audience targeting, brand protection, monetization, ad network, publisher network, keyword density, pattern proximity, contextual matching, contextual matching engine, internet advertising, matching engine">
 <link rel="SHORTCUT ICON" href="/favicon.ico">
 <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">        
 <link rel="stylesheet" type="text/css" href="/css/style4.css" title="default">
-<link rel="stylesheet" href="/css/lightbox.css" type="text/css" media="screen">
+<!--<link rel="stylesheet" href="/css/lightbox.css" type="text/css" media="screen" />-->
 
 <script type="text/javascript" src="/js/navi.js"></script>
 
 <script type="text/javascript" src="/js/prototype.js"></script>
 <script type="text/javascript" src="/js/scriptaculous.js?load=effects,builder"></script>
-<script src="/js/jquery.js" type="text/javascript"></script>
-
+<script type="text/javascript" src="/js/jquery.js"></script>
 <script>jQuery.noConflict();</script>
-
-<script type="text/javascript" src="/js/lightbox.js"></script>
-<script src="/js/thickbox.js" type="text/javascript"></script>
-
-
-<!-- script src="/js/contact.js" type="text/javascript"></script -->
-
-
-
-	</head>
+<!--<script type="text/javascript" src="/js/lightbox.js"></script>
+<script src="/js/thickbox.js" type="text/javascript"></script>-->
+<!-- script src="/js/contact.js" type="text/javascript"></script -->	</head>
 	<body>
 
 		<div class="wrapper">
@@ -96,6 +79,9 @@ contextual matching engine, internet advertising, matching engine, adsense, yaho
           </li>
           <li>
            <a href="/info/contact.php">Contact</a>
+          </li>
+		  <li>
+           <a href="/info/career.php">Career</a>
           </li>
           <li>
            <a class="lastmenu" href="/info/press/">Press</a>
@@ -229,7 +215,7 @@ Palo Alto, CA 94306, USA
  <div id="footerout">
   <div id="footer">
    <div class="footerlink">
-    <a href="/info/index.php">About Us</a>|<a href="/info/contact.php">Contact</a>|<a href="/info/privacy.php">Privacy Policy</a>
+    <a href="/info/index.php">About Us</a>|<a href="/info/contact.php">Contact</a>|<a href="/info/career.php">Career</a>|<a href="/info/privacy.php">Privacy Policy</a>
 	</div>
    <span>
     © 2010 Proximic, Inc. 2006-2010 All rights reserved.<br>
