--- a/l/li/lin/linkfromblog.com.html
+++ b/l/li/lin/linkfromblog.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the linkfromblog.com privacy policy that was archived on 2010-06-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100611120306id_/http%3A//linkfromblog.com/policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the linkfromblog.com privacy policy that was archived on 2010-09-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100923083038id_/http%3A//linkfromblog.com/policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Policy - LinkFromBlog - buy blog reviews, advertise on blogs</title>
@@ -155,6 +155,7 @@ document.writeln('<scr' + 'ipt language="JavaScript" src="'+cot_loc0+'" type="te
 		<span><a href="http://linkfromblog.com/terms">Terms</a></span>
 		<span><a href="http://linkfromblog.com/campaigns-alerter">Downloads</a></span>
 		<span><a href="http://linkfromblog.com/aboutus">About us</a></span>
+		<span><a href="http://linkfromblog.com/feedbacks">Contact us</a></span>
 	</div>
 	<div>
 		<span>
